# HydraLM

./: .gitignore  README.md
research/hydralm/: AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RESULTS.md  SECURITY.md  pyproject.toml  results.json
research/hydralm/docs/: api.md  architecture.md  benchmarks.md  claims.md  deployment.md  evaluation.md  fact-bank.md  faq.md  glossary.md  roadmap.md  theory.md  training.md
research/hydralm/hydralm/: __init__.py  config.py  generation.py  model.py  spec_decoding.py  streaming.py  utils.py
research/hydralm/hydralm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/hydralm/hydralm/baselines/: __init__.py  flops.py  transformer.py
research/hydralm/hydralm/deploy/: __init__.py  compiled.py  hf_adapter.py
research/hydralm/hydralm/eval/: __init__.py  claims.py  long_context.py  mqar.py  online_learning.py
research/hydralm/hydralm/kernels/: __init__.py  delta_rule.py
research/hydralm/hydralm/memory/: __init__.py  fact_bank.py
research/hydralm/hydralm/modules/: __init__.py  block.py  gated_deltanet.py  rmsnorm.py  rotary.py  short_conv.py  sliding_window.py  swiglu.py
research/hydralm/hydralm/optim/: __init__.py  muon.py
research/hydralm/hydralm/training/: __init__.py  trainer.py
research/hydralm/scripts/: benchmark_length.py  cost_analysis.py  million_token_demo.py  needle_in_haystack.py  online_learning_demo.py  reproduce_claims.py  run_mqar.py  train_tiny.py
research/hydralm/tests/: test_claims.py  test_complexity.py  test_equivalence.py  test_eval_and_adapter.py  test_fact_bank.py  test_muon.py  test_shapes.py  test_spec_decoding.py  test_streaming.py
